WIP: Add CPU check on startup

WIP description to be done, see #116592 for details.