source/creator/creator.cc
@@ -12,6 +12,7 @@
 #ifdef WIN32
 #  include "utfconv.hh"
 #  include <windows.h>
+#  pragma comment(linker, "/include:cpu_check_win")
 #endif
 
 #if defined(WITH_TBB_MALLOC) && defined(_MSC_VER) && defined(NDEBUG)
@@ -278,7 +279,6 @@ int main(int argc,
 )
 {
   bContext *C;
-
 #ifndef WITH_PYTHON_MODULE
   bArgs *ba;
 #endif
